--- a/run/config.json
+++ b/run/config.json
@@ -1,3 +1,3 @@
 {
-    "signs": "abcdefghijklmnopqrstuvwxyz1234567890+#,.-<>;:_'*^"
+    "characters": "abcdefghijklmnopqrstuvwxyz1234567890+#,.-<>;:_'*^"
 }
